# bandcamp-explorer

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/bandcamp_explorer/: __init__.py
src/bandcamp_explorer/app/: cli.py  discord.py  display.py  images.py  navigator.py
src/bandcamp_explorer/core/: __init__.py  api.py  client.py  countries.py  format.py  parsers.py  utils.py
src/pybandcamp/: __init__.py
src/pybandcamp/app/: cli.py  display.py
src/pybandcamp/core/: __init__.py  client.py  countries.py  parsers.py  utils.py
