[project]
name = "bandcamp-explorer"
version = "0.1.1"
description = "Python library and CLI for Bandcamp data"
readme = "README.md"
authors = [
    { name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "requests",
    "loguru>=0.7.3",
    "rich>=14.0.0",
]

[project.scripts]
bandcamp = "bandcamp_explorer.app.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
