[project]
name = "bandcamp-explorer"
version = "0.2.0"
description = "Python library and CLI for Bandcamp data"
readme = "README.md"
authors = [
    { name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "beautifulsoup4",
    "requests",
    "loguru>=0.7.3",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/gabriel-jung/bandcamp-explorer"
Repository = "https://github.com/gabriel-jung/bandcamp-explorer"

[project.scripts]
bandcamp = "bandcamp_explorer.app.cli:main"

[build-system]
requires = ["uv-build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.7",
]
